fix: fix long headers overflowing on modal (#1667)
* fix: fix long headers overflowing on modal

* fix: fix long header should be shown in a tooltip

* chore: add changelog

* chore: revert children update in modal

* chore: revert cursor changes

--- a/packages/components/src/styles/Heading.module.css
+++ b/packages/components/src/styles/Heading.module.css
@@ -1,2 +1,7 @@
 .heading {
+	white-space: nowrap;
+	max-width: calc(100% - var(--lp-size-32));
+	overflow: hidden;
+	text-overflow: ellipsis;
+	position: relative;
 }
